--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -6,8 +6,6 @@
 
 .root {
   @include font-smoothing();
-  @include box-shadow(0 0 80em -2em map-get($reg-colors, 'dark-silver'));
-  @include user-select(none);
 
   display: inline-block;
   min-width: map-get($reg-screens, 'min-w');
@@ -16,6 +14,8 @@
   font: map-get($roles-typo-font-weights, 'text') 1em map-get($roles-typo-font-families, 'text');
   text-align: center;
   cursor: default;
+  user-select: none;
+  box-shadow: 0 0 80em -2em map-get($reg-colors, 'dark-silver');
 
   @include mq-screens-big-landscape() {
     display: block;
