--- a/client/src/styles/external/custom-scrollbar.scss
+++ b/client/src/styles/external/custom-scrollbar.scss
@@ -22,9 +22,8 @@
     //--------------------------| Bar
 
     .rcs-inner-handle {
-      @include transition(background-color 0.15s linear);
-
       background-color: rgba(map-get($reg-colors, 'black'), 0.3);
+      transition: background-color 0.15s linear;
 
       &:hover,
       &:active {
