--- a/client/src/app/components/atoms/switcher/switcher.scss
+++ b/client/src/app/components/atoms/switcher/switcher.scss
@@ -21,13 +21,12 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 //--------------------------| Root
 
 .root {
-  @include border-radius(0.15em);
-  @include transition($transition);
-
   position: relative;
   display: block;
   height: get-em-unit($roles-size-switcher-height);
   border: 1px solid map-get($reg-colors, 'silver');
+  border-radius: 0.15em;
+  transition: $transition;
 
   &,
   * {
@@ -36,11 +35,11 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 
   // Background
   &:not([data-color='black']) {
-    @include background-image(map-get($reg-gradients, 'pale-silver'));
+    background-image: map-get($reg-gradients, 'pale-silver');
   }
 
   &[data-color='black'] {
-    @include background-image(map-get($reg-gradients, 'dark-silver'));
+    background-image: map-get($reg-gradients, 'dark-silver');
   }
 }
 
@@ -59,14 +58,13 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 //--------------------------| Lever
 
 .lever {
-  @include translateY(-#{$lever-height/2});
-  @include transition($transition);
-
   position: absolute;
   top: 50%;
   left: -1px;
   width: $wing-width;
   padding: 0 0.14em;
+  transition: $transition;
+  transform: translateY(-#{$lever-height/2});
 
   .root:not([data-weight='fat']) & {
     height: $lever-height;
@@ -86,17 +84,16 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 //--------------------------| Bar
 
 .bar {
-  @include border-radius(0.15em);
-
   display: block;
   height: 100%;
+  border-radius: 0.15em;
 
   .root:not([data-color='black']) .lever & {
-    @include background-image(map-get($reg-gradients, 'orange'));
+    background-image: map-get($reg-gradients, 'orange');
   }
 
   .root[data-color='black'] .lever & {
-    @include background-image(map-get($reg-gradients, 'black'));
+    background-image: map-get($reg-gradients, 'black');
   }
 }
 
@@ -118,10 +115,6 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
   &::before {
     $size: 1em;
 
-    @include transition($transition);
-    @include translateX(-50%);
-    @include opacity(0);
-
     position: absolute;
     top: 0.32em;
     left: 50%;
@@ -130,6 +123,9 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
     content: '';
     background-repeat: no-repeat;
     background-position: center;
+    opacity: 0;
+    transition: $transition;
+    transform: translateX(-50%);
   }
 }
 
@@ -147,16 +143,15 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 //--------------------------| States
 
 .root.marked {
-  @include box-shadow($shadow);
-
   border-color: $marked-color;
+  box-shadow: $shadow;
 
   &::before {
-    @include opacity(0.5);
+    opacity: 0.5;
   }
 
   .lever {
-    @include translateY(-#{$lever-height * 1.2});
+    transform: translateY(-#{$lever-height * 1.2});
   }
 }
 
@@ -164,11 +159,11 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
   border-color: $selected-color;
 
   &::before {
-    @include opacity(0.5);
+    opacity: 0.5;
   }
 
   .lever {
-    @include translateY(-#{$lever-height * 1.2});
+    transform: translateY(-#{$lever-height * 1.2});
   }
 }
 
@@ -178,7 +173,7 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
       border-color: $hover-color;
 
       &::before {
-        @include opacity(0.5);
+        opacity: 0.5;
       }
     }
   }
