--- a/client/src/app/components/templates/homepage/homepage.scss
+++ b/client/src/app/components/templates/homepage/homepage.scss
@@ -5,9 +5,8 @@
 //--------------------------| Root
 
 .root {
-  @include display-flex();
-  @include flex-direction(column);
-
+  display: flex;
+  flex-direction: column;
   height: 100vh;
 }
 
@@ -15,20 +14,20 @@
 //--------------------------| Main
 
 .main {
-  @include display-flex();
-  @include flex(1);
-  @include flex-direction(column);
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 
 //--------------------------| Section
 
 .section:last-child {
-  @include display-flex();
-  @include flex-direction(column);
-  @include flex(1);
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 
   > * {
-    @include flex(1);
+    flex: 1;
   }
 }
