--- a/client/src/app/components/atoms/switcher/switcher.scss
+++ b/client/src/app/components/atoms/switcher/switcher.scss
@@ -132,7 +132,7 @@ $transition: all map-get($roles-transitions, 'glow') ease-in-out;
 @each $role in $roles {
   $url: '../../../../assets/icons/#{$role}.svg';
 
-  &[data-role='#{$role}'] {
+  [data-role='#{$role}'] {
     &::before {
       background-image: url($url);
     }
