Add revision panel and air conditioners content

--- a/client/src/app/components/atoms/switcher/switcher.scss
+++ b/client/src/app/components/atoms/switcher/switcher.scss
@@ -4,7 +4,7 @@
 
 //--------------------------| Data
 
-$roles: 'main' 'lights' 'outlets' 'unknown' 'cooking' 'laundry' 'boiler' 'heating';
+$roles: 'main' 'lights' 'outlets' 'unknown' 'cooking' 'air_con' 'laundry' 'boiler' 'heating' 'panel';
 
 
 //--------------------------| Variables
